feat: more flexible metrics, event types management & small refactoring
